--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -14,7 +14,7 @@ format:
         toc: true
         toc-location: left
 editor: source
-bibliogaphy: references.bib
+bibliography: references.bib
 ---
 
 ```{r}
