--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -79,6 +79,6 @@ Additionally, note that in @tbl-horses-info we consider the sample standard devi
 
 See @fig-sd for an illustration.
 
-In @fig-sd  we zoom in and look at the province of `{r} largest_sd` which had the largest spread of values in terms of standard deviation.
+In @fig-sd  we zoom in and look at the province of `{r} largest_sd`, which had the largest spread of values in terms of standard deviation.
 
 ## References
